# qtupdate

./: .gitignore  crawled_page.html  main.py  pyproject.toml  qtupdate.spec
src/qtupdate/: __init__.py  main_window.py  updater.py
